fix alignment of 'metaflop beta' with navigation

--- a/views/screen.scss
+++ b/views/screen.scss
@@ -215,10 +215,8 @@ object {
 }
 
 #navigation {
-    margin: 0 0 $box_spacing_x 0;
     padding: ($box_spacing_x / 2) $box_spacing_y ($box_spacing_x / 2);
     font-size: $font_size;
-    line-height: $font_size;
     position: fixed;
     overflow: hidden;
     width: $content_width - (2 * $box_spacing_y);
